Sat Nov  9 09:04:48 2013  Masaya Tarui  <tarui@ruby-lang.org>

	* gc.c (gc_marks_test): Bugfix. Fix a struct member name for build
	  with RGENGC_CHECK_MODE.

Sat Nov  9 08:58:23 2013  Masaya Tarui  <tarui@ruby-lang.org>

	* gc.c : Add GC_PROFILE_DETAIL_MEMORY option.
	  If GC_PROFILE_MORE_DETAIL && GC_PROFILE_DETAIL_MEMORY,
	  maxrss, minflt and majflt are added to each profile record.

Sat Nov  9 07:41:41 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* internal.h (rb_vm_backtrace_object, rb_gc_count): make prototype
	  declarations, not old-K&R style.

Sat Nov  9 06:11:14 2013  vo.x (Vit Ondruch)  <vondruch@redhat.com>

	* tool/rbinstall.rb (Gem::Specification#collect): make stable
	  Gem::Specification.files in default .gemspecs the different order of
	  "files" in .gemspec files makes them different therefore possibly
	  conflicting in multilib scenario.  patch by vo.x (Vit Ondruch) at
	  [ruby-core:57544] [Bug #8623].

Sat Nov  9 01:59:18 2013  Aman Gupta <ruby@tmm1.net>

	* ext/objspace/object_tracing.c: Add experimental methods to
	  dump objectspace as json: ObjectSpace.dump_all and
	  ObjectSpace.dump(obj). These methods are useful for debugging
	  reference leaks and memory growth in large ruby applications.
	  [Bug #9026] [ruby-core:57893] [Fixes GH-423]
	* test/objspace/test_objspace.rb: tests for above.

Sat Nov  9 00:26:50 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (GetLastError): already defined in windows.h on nowadays
	  cygwin, and caused the confliction with the system provided
	  definition on cygwin64.  by @kou1okada [Fixes GH-433].

Fri Nov  8 18:35:31 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* lib/open3.rb: receive arguments as keyword arguments.

Fri Nov  8 13:19:26 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* io.c (rb_io_open_with_args): use RARRAY_CONST_PTR().

	* io.c (rb_scan_open_args): use const qualifier for above.

	* io.c (rb_open_file): ditto.

	* io.c (rb_io_open_with_args): ditto.
